lesson 1 Step 1 Step 2 Step 3 Step 4 Step 5 Step 6 Step 7 step 8 Step 9 proper format, project structure, player sprite, game loop, arrow key movement, load images, background image, player image, render update.

--- a/lesson 1 fishy intro/step4_gameloop.html
+++ b/lesson 1 fishy intro/step4_gameloop.html
@@ -34,6 +34,17 @@
                     this.context.fillRect(this.x, this.y, this.width, this.height)
                 }
             });
+            //Game Logic
+            let loop = kontra.GameLoop({
+                update(){
+                    player.update();
+                },
+                render(){
+                    player.render();
+                }
+            });
+
+            loop.start();
         </script>
     </body>
 </html>
