--- a/lesson 1 fishy intro/step5_arrowkeymovement.html
+++ b/lesson 1 fishy intro/step5_arrowkeymovement.html
@@ -27,13 +27,28 @@
                 height: 30,
                 color: 'orange',
                 update() {
-                    this.x += 2;
-                },
+                    // movement of arrow keys, we have replaced this.x += 2; with arrow keys movement shown below
+                if (keyPressed('arrowleft')) this.x -= 2;
+                if (keyPressed('arrowright')) this.x += 2;
+                if (keyPressed('arrowup')) this.y -= 2;
+                if (keyPressed('arrowdown')) this.y += 2;
+                //this.advance();
+            },
                 render() {
                     this.context.fillStyle = this.color;
                     this.context.fillRect(this.x, this.y, this.width, this.height)
                 }
             });
+            //Game Logic
+            let loop = kontra.GameLoop({
+                update(){
+                    player.update();
+                },
+                render(){
+                    player.render();
+                }
+            });
+            loop.start();
         </script>
     </body>
 </html>
