--- a/lesson 2 Enemies/step6_spawntimer.html
+++ b/lesson 2 Enemies/step6_spawntimer.html
@@ -42,25 +42,24 @@
                     height: 30,
                     image: playerImage,
                     update() {
-                        // movement of arrow keys, we have replaced this.x += 2; with arrow keys movement shown below
                         if (keyPressed('arrowleft')) this.x -= 6;
                         if (keyPressed('arrowright')) this.x += 6;
                         if (keyPressed('arrowup')) this.y -= 6;
                         if (keyPressed('arrowdown')) this.y += 6;
                     },
                 });
-                ///// lesson 2 start, Creating one enemy rectangle, now we will update our previous enemy sprite with the following
+                /// prepare an Enemy list
                 let enemy = Sprite({
-                    x: 800,         //it will start off the right edge
-                    y: Math.random() * (canvas.height - 30),   //random vertical position
+                    x: 800,
+                    y: Math.random() * (canvas.height - 30),
                     width: 60,
                     height: 30,
-                    dx: -(Math.random() * 3+1),      //move speed between -1 and -4
-                    color: 'red',  //enemy color
+                    dx: -(Math.random() * 3+1),
+                    color: 'red',
                     update() {
                         this.advance();
                         if (this.x + this.width < 0) {
-                            this.ttl =0;  //remove the sprite when offscreen
+                            this.ttl =0;
                         }
                     },
                     render() {
@@ -68,16 +67,64 @@
                         this.context.fillRect(this.x, this.y, this.width, this.height);
                     }
                 });
+                // Prepare an enemy list
+                let enemies = [];
+
+                // Collision detection
+                function isoverlapping(min1, max1, min2, max2) {
+                    return max1 >= min2 && max2 >= min1;
+                }
+                function iscolliding(sprite1, sprite2) {
+                    return isoverlapping(sprite1.x, sprite1.x + sprite1.width, sprite2.x, sprite2.x+ sprite2.width) &&
+                        isoverlapping(sprite1.y, sprite1.y + sprite1.height, sprite2.y, sprite2.y + sprite2.height);
+                }
+
+                // ✅ Spawn Timer
+                let spawnTimer = 60; // 60 frames = ~1 second
+
                 //Game Logic
                 let loop = kontra.GameLoop({
                     update() {
                         player.update();
-                        enemy.update();
+                        enemies.forEach(e => e.update());   //update all enemies
+                        enemies = enemies.filter(e => e.isAlive());
+
+                        enemies.forEach(e => {
+                            if (iscolliding(player, e)) {
+                                e.color = 'purple';
+                            }
+                        });
+
+                        // ✅ Spawn new enemies every second
+                        spawnTimer--;
+                        if (spawnTimer <= 0) {
+                            let newEnemy = kontra.Sprite({
+                                x: 800,
+                                y: Math.random() * (canvas.height - 30),
+                                width: 60,
+                                height: 30,
+                                dx: - (Math.random() * 3 + 1),
+                                color: 'red',
+                                update() {
+                                    this.advance();
+                                    if (this.x + this.width < 0) {
+                                        this.ttl = 0;
+                                    }
+                                },
+                                render() {
+                                    this.context.fillStyle = this.color;
+                                    this.context.fillRect(this.x, this.y, this.width, this.height);
+                                }
+                            });
+
+                            enemies.push(newEnemy);
+                            spawnTimer = 60; // reset the timer
+                        }
                     },
                     render() {
                         background.render();
                         player.render();
-                        enemy.render();
+                        enemies.forEach(e => e.render());  //render all enemies
                     }
                 });
                 loop.start();
