--- a/lesson 1 fishy intro/step3_player_sprite.html
+++ b/lesson 1 fishy intro/step3_player_sprite.html
@@ -17,9 +17,7 @@
         <script>
             let {init, Sprite, GameLoop, initKeys, keyPressed, load} = kontra;
             let {canvas, context} = init('game');
-
-            // enable keyboard
-            initKeys();
+            initKeys();             // enable keyboards
             let player = Sprite({
                 x: 100,
                 y: 100,
