--- a/lesson 1 fishy intro/step4_gameloop.html
+++ b/lesson 1 fishy intro/step4_gameloop.html
@@ -17,8 +17,6 @@
         <script>
             let {init, Sprite, GameLoop, initKeys, keyPressed, load} = kontra;
             let {canvas, context} = init('game');
-
-            // enable keyboard
             initKeys();
             let player = Sprite({
                 x: 100,
@@ -34,8 +32,7 @@
                     this.context.fillRect(this.x, this.y, this.width, this.height)
                 }
             });
-            //Game Logic
-            let loop = kontra.GameLoop({
+            let loop = kontra.GameLoop({   //Game logic
                 update(){
                     player.update();
                 },
