--- a/lesson 1 fishy intro/step5_arrowkeymovement.html
+++ b/lesson 1 fishy intro/step5_arrowkeymovement.html
@@ -17,8 +17,6 @@
         <script>
             let {init, Sprite, GameLoop, initKeys, keyPressed, load} = kontra;
             let {canvas, context} = init('game');
-
-            // enable keyboard
             initKeys();
             let player = Sprite({
                 x: 100,
@@ -27,19 +25,16 @@
                 height: 30,
                 color: 'orange',
                 update() {
-                    // movement of arrow keys, we have replaced this.x += 2; with arrow keys movement shown below
-                if (keyPressed('arrowleft')) this.x -= 2;
+                if (keyPressed('arrowleft')) this.x -= 2;      // updating key movement
                 if (keyPressed('arrowright')) this.x += 2;
                 if (keyPressed('arrowup')) this.y -= 2;
                 if (keyPressed('arrowdown')) this.y += 2;
-                //this.advance();
             },
                 render() {
                     this.context.fillStyle = this.color;
                     this.context.fillRect(this.x, this.y, this.width, this.height)
                 }
             });
-            //Game Logic
             let loop = kontra.GameLoop({
                 update(){
                     player.update();
