--- a/lesson 1 fishy intro/step8_playerimage.html
+++ b/lesson 1 fishy intro/step8_playerimage.html
@@ -17,13 +17,10 @@
         <script>
             let {init, Sprite, GameLoop, initKeys, keyPressed, load} = kontra;
             let {canvas, context} = init('game');
-                     // enable keyboard
             initKeys();
-                    // load images
                     load('background.png', 'player.png').then(images => {
                         let [backgroundImage, playerImage] = images;
             });
-                        // background Sprite
                 let background = Sprite({
                     x: 0,
                     y: 0,
@@ -34,15 +31,13 @@
                         this.context.drawImage(this.image, this.x, this.y, canvas.width, canvas.height);
                 }
             });
-                // Now we will update the player
-                let player = Sprite({
+                let player = Sprite({               // Now we will update the player
                     x: 100,
                     y: 100,
                     width: 40,
                     height: 30,
                     image: playerImage,
                     update() {
-                        // movement of arrow keys, we have replaced this.x += 2; with arrow keys movement shown below
                         if (keyPressed('arrowleft')) this.x -= 2;
                         if (keyPressed('arrowright')) this.x += 2;
                         if (keyPressed('arrowup')) this.y -= 2;
@@ -54,7 +49,6 @@
                         this.context.fillRect(this.x, this.y, this.width, this.height)
                 }
             });
-                    //Game Logic
                 let loop = kontra.GameLoop({
                     update(){
                         player.update();
