--- a/lesson 1 fishy intro/step9_renderupdate.html
+++ b/lesson 1 fishy intro/step9_renderupdate.html
@@ -17,50 +17,48 @@
         <script>
             let {init, Sprite, GameLoop, initKeys, keyPressed, load} = kontra;
             let {canvas, context} = init('game');
-                    // enable keyboard
             initKeys();
-                        // load images
-                    load('background.png', 'player.png').then(images => {
-                        let [backgroundImage, playerImage] = images;
-                        // background Sprite
-                        let background = Sprite({
-                            x: 0,
-                            y: 0,
-                            image: backgroundImage,
-                            width: canvas.width,
-                            height: canvas.height,
-                            render() {
-                                this.context.drawImage
-                                (this.image, this.x, this.y, canvas.width, canvas.height);
-                            }
-                        });
-                        // Now we will update the player
-                        let player = Sprite({
-                            x: 100,
-                            y: 100,
-                            width: 40,
-                            height: 30,
-                            image: playerImage,
-                            update() {
-                                // movement of arrow keys, we have replaced this.x += 2; with arrow keys movement shown below
-                                if (keyPressed('arrowleft')) this.x -= 6;
-                                if (keyPressed('arrowright')) this.x += 6;
-                                if (keyPressed('arrowup')) this.y -= 6;
-                                if (keyPressed('arrowdown')) this.y += 6;
-                            },
-                        });
-                        //Game Logic
-                        let loop = kontra.GameLoop({
-                            update() {
-                                player.update();
-                            },
-                            render() {
-                                background.render();
-                                player.render();
-                            }
-                        });
-                        loop.start();
-                        });
+            load('background.png', 'player.png').then(images => {
+                let [backgroundImage, playerImage] = images;
+            });
+            let background = Sprite({
+                x: 0,
+                y: 0,
+                image: backgroundImage,
+                width: canvas.width,
+                height: canvas.height,
+                render() {
+                    this.context.drawImage(this.image, this.x, this.y, canvas.width, canvas.height);
+                }
+            });
+            let player = Sprite({
+                x: 100,
+                y: 100,
+                width: 40,
+                height: 30,
+                image: playerImage,
+                update() {
+                    if (keyPressed('arrowleft')) this.x -= 2;
+                    if (keyPressed('arrowright')) this.x += 2;
+                    if (keyPressed('arrowup')) this.y -= 2;
+                    if (keyPressed('arrowdown')) this.y += 2;
+                    //this.advance();
+                },
+                render() {
+                    this.context.fillStyle = this.color;
+                    this.context.fillRect(this.x, this.y, this.width, this.height)
+                }
+            });
+            let loop = kontra.GameLoop({
+                update(){
+                    player.update();
+                },
+                render(){              //render update
+                    background.render();
+                    player.render();
+                }
+            });
+            loop.start();
         </script>
     </body>
 </html>
