--- a/lesson 2 Enemies/step1_enemysprite.html
+++ b/lesson 2 Enemies/step1_enemysprite.html
@@ -17,12 +17,9 @@
         <script>
             let {init, Sprite, GameLoop, initKeys, keyPressed, load} = kontra;
             let {canvas, context} = init('game');
-            // enable keyboard
             initKeys();
-            // load images
             load('background.png', 'player.png').then(images => {
                 let [backgroundImage, playerImage] = images;
-                // background Sprite
                 let background = Sprite({
                     x: 0,
                     y: 0,
@@ -34,7 +31,6 @@
                         (this.image, this.x, this.y, canvas.width, canvas.height);
                     }
                 });
-                // Now we will update the player
                 let player = Sprite({
                     x: 100,
                     y: 100,
@@ -42,15 +38,13 @@
                     height: 30,
                     image: playerImage,
                     update() {
-                        // movement of arrow keys, we have replaced this.x += 2; with arrow keys movement shown below
                         if (keyPressed('arrowleft')) this.x -= 6;
                         if (keyPressed('arrowright')) this.x += 6;
                         if (keyPressed('arrowup')) this.y -= 6;
                         if (keyPressed('arrowdown')) this.y += 6;
                     },
                 });
-                ///// lesson 2 start, Creating one enemy rectangle
-                let enemy = Sprite({
+                let enemy = Sprite({                ///// lesson 2 start, Creating one enemy rectangle
                     x: 800,
                     y: 200,
                     width: 60,
@@ -65,7 +59,6 @@
                         this.context.fillRect(this.x, this.y, this.width, this.height);
                     }
                 });
-                //Game Logic
                 let loop = kontra.GameLoop({
                     update() {
                         player.update();
