--- a/lesson 3 Player Growth, Score, and Sprite Images/step2.html
+++ b/lesson 3 Player Growth, Score, and Sprite Images/step2.html
@@ -13,11 +13,19 @@
         </style>
     </head>
     <body>
-    <canvas id="game" width="800" height="600"></canvas>
+        <canvas id="game" width="800" height="600"></canvas>
         <script>
-            let {init, Sprite, GameLoop, initKeys, keyPressed, load} = kontra;
+            let {init, Sprite, GameLoop, initKeys, keyPressed, load, Text} = kontra;  <!-- added Text here -->
             let {canvas, context} = init('game');
             initKeys();
+            let score = 0;          // 🟩 Added Score Tracking
+            let scoreText = Text({
+                text: 'Score: 0',
+                font: '20px Arial',
+                color: 'black',
+                x: 10,
+                y: 10
+            });
             load('background.png', 'player.png').then(images => {
                 let [backgroundImage, playerImage] = images;
                 let background = Sprite({
@@ -34,33 +42,16 @@
                 let player = Sprite({
                     x: 100,
                     y: 100,
-                    width: 40,
-                    height: 30,
+                    width: 60,
+                    height: 45,
                     image: playerImage,
+                    size: 40, // 🟩 Added size property for growth tracking
                     update() {
                         if (keyPressed('arrowleft')) this.x -= 4;
                         if (keyPressed('arrowright')) this.x += 4;
                         if (keyPressed('arrowup')) this.y -= 4;
                         if (keyPressed('arrowdown')) this.y += 4;
                     },
-                });
-                let enemy = Sprite({
-                    x: 800,
-                    y: Math.random() * (canvas.height - 30),
-                    width: 60,
-                    height: 30,
-                    dx: -(Math.random() * 3+1),
-                    color: 'red',
-                    update() {
-                        this.advance();
-                        if (this.x + this.width < 0) {
-                            this.ttl =0;
-                        }
-                    },
-                    render() {
-                        this.context.fillStyle = this.color;
-                        this.context.fillRect(this.x, this.y, this.width, this.height);
-                    }
                 });
                 let enemies = [];
                 function isoverlapping(min1, max1, min2, max2) {
@@ -70,25 +61,41 @@
                     return isoverlapping(sprite1.x, sprite1.x + sprite1.width, sprite2.x, sprite2.x+ sprite2.width) &&
                         isoverlapping(sprite1.y, sprite1.y + sprite1.height, sprite2.y, sprite2.y + sprite2.height);
                 }
-                let spawnTimer = 60;     // 60 frames = ~1 second
+                let spawnTimer = 60;
                 let loop = kontra.GameLoop({
                     update() {
                         player.update();
-                        enemies.forEach(e => e.update());   //update all enemies
+                        enemies.forEach(e => e.update());
                         enemies = enemies.filter(e => e.isAlive());
 
+                        // 🟩 Updated collision logic for Step 3
                         enemies.forEach(e => {
-                            if (iscolliding(player, e)) {
-                                e.color = 'purple';
+                            if (iscolliding(player, e) && !e.wasEaten) {
+                                if (e.width * e.height < player.size * player.size) {
+                                    e.wasEaten = true;
+                                    e.color = "blue"; // Optional visual feedback
+                                    player.size += 2; // Grow player
+                                    player.width += 2;
+                                    player.height += 2;
+                                    score += 1;
+                                    scoreText.text = 'Score: ' + score;
+                                } else {
+                                    console.log("That fish is too big!");
+                                }
                             }
                         });
-                        spawnTimer--;               // ✅ Spawn new enemies every second
+
+                        spawnTimer--;
                         if (spawnTimer <= 0) {
+                            // 🟩 Make enemies of random sizes (some small, some big)
+                            let enemyWidth = Math.floor(Math.random() * 40) + 20; // 20–60
+                            let enemyHeight = Math.floor(Math.random() * 20) + 15; // 15–35
+
                             let newEnemy = kontra.Sprite({
                                 x: 800,
                                 y: Math.random() * (canvas.height - 30),
-                                width: 60,
-                                height: 30,
+                                width: enemyWidth,
+                                height: enemyHeight,
                                 dx: - (Math.random() * 3 + 1),
                                 color: 'red',
                                 update() {
@@ -104,13 +111,14 @@
                             });
 
                             enemies.push(newEnemy);
-                            spawnTimer = 60; // reset the timer
+                            spawnTimer = 60;
                         }
                     },
                     render() {
                         background.render();
                         player.render();
-                        enemies.forEach(e => e.render());  //render all enemies
+                        enemies.forEach(e => e.render());
+                        scoreText.render();   // 🟩 render score text on top
                     }
                 });
                 loop.start();
