--- a/lesson 2 Enemies/step2_enemyspeed.html
+++ b/lesson 2 Enemies/step2_enemyspeed.html
@@ -27,8 +27,7 @@
                     width: canvas.width,
                     height: canvas.height,
                     render() {
-                        this.context.drawImage
-                        (this.image, this.x, this.y, canvas.width, canvas.height);
+                        this.context.drawImage(this.image, this.x, this.y, canvas.width, canvas.height);
                     }
                 });
                 let player = Sprite({
@@ -38,18 +37,18 @@
                     height: 30,
                     image: playerImage,
                     update() {
-                        if (keyPressed('arrowleft')) this.x -= 4;
-                        if (keyPressed('arrowright')) this.x += 4;
-                        if (keyPressed('arrowup')) this.y -= 4;
-                        if (keyPressed('arrowdown')) this.y += 4;
+                        if (keyPressed('arrowleft')) this.x -= 2;
+                        if (keyPressed('arrowright')) this.x += 2;
+                        if (keyPressed('arrowup')) this.y -= 2;
+                        if (keyPressed('arrowdown')) this.y += 2;
                     },
                 });
                 let enemy = Sprite({
                     x: 800,
-                    y: Math.random() * (canvas.height - 30),   //random vertical position
+                    y: Math.random() * (canvas.height - 30),
                     width: 60,
                     height: 30,
-                    dx: -(Math.random() * 3+1),      //move speed between -1 and -4
+                    dx: -(Math.random() * 3 + 1),
                     color: 'red',  //enemy color
                     update() {
                         this.advance();
@@ -59,7 +58,7 @@
                         this.context.fillRect(this.x, this.y, this.width, this.height);
                     }
                 });
-                let loop = kontra.GameLoop({
+                let loop = kontra.GameLoop({    // Game logic
                     update() {
                         player.update();
                         enemy.update();
