--- a/lesson 2 Enemies/step5_collisiondetection.html
+++ b/lesson 2 Enemies/step5_collisiondetection.html
@@ -27,8 +27,7 @@
                     width: canvas.width,
                     height: canvas.height,
                     render() {
-                        this.context.drawImage
-                        (this.image, this.x, this.y, canvas.width, canvas.height);
+                        this.context.drawImage(this.image, this.x, this.y, canvas.width, canvas.height);
                     }
                 });
                 let player = Sprite({
@@ -38,10 +37,10 @@
                     height: 30,
                     image: playerImage,
                     update() {
-                        if (keyPressed('arrowleft')) this.x -= 4;
-                        if (keyPressed('arrowright')) this.x += 4;
-                        if (keyPressed('arrowup')) this.y -= 4;
-                        if (keyPressed('arrowdown')) this.y += 4;
+                        if (keyPressed('arrowleft')) this.x -= 2;
+                        if (keyPressed('arrowright')) this.x += 2;
+                        if (keyPressed('arrowup')) this.y -= 2;
+                        if (keyPressed('arrowdown')) this.y += 2;
                     },
                 });
                 let enemy = Sprite({
@@ -49,12 +48,12 @@
                     y: Math.random() * (canvas.height - 30),
                     width: 60,
                     height: 30,
-                    dx: -(Math.random() * 3+1),
-                    color: 'red',
+                    dx: -(Math.random() * 3 + 1),
+                    color: 'red',  //enemy color
                     update() {
                         this.advance();
                         if (this.x + this.width < 0) {
-                            this.ttl =0;
+                            this.ttl = 0;
                         }
                     },
                     render() {
@@ -63,13 +62,16 @@
                     }
                 });
                 let enemies = [];
-                function isoverlapping(min1, max1, min2, max2) {                // Collision detection
+
+                function isoverlapping(min1, max1, min2, max2) {             // Collision detection
                     return max1 >= min2 && max2 >= min1;
                 }
+
                 function iscolliding(sprite1, sprite2) {
-                    return isoverlapping(sprite1.x, sprite1.x + sprite1.width, sprite2.x, sprite2.x+ sprite2.width) &&
+                    return isoverlapping(sprite1.x, sprite1.x + sprite1.width, sprite2.x, sprite2.x + sprite2.width) &&
                         isoverlapping(sprite1.y, sprite.y + sprite1.height, sprite2.y + sprite2.height);
                 }
+
                 let loop = kontra.GameLoop({
                     update() {
                         player.update();
