updating a href to lesson plan appropriate code

--- a/lesson 1 fishy intro/lesson1.html
+++ b/lesson 1 fishy intro/lesson1.html
@@ -81,7 +81,7 @@
                 <p>HTML is the language that builds websites. It uses <code>&lt;tags&gt;</code> to organize what you see.</p>
                 <p>Tags like <code>&lt;body&gt;</code> and <code>&lt;canvas&gt;</code> mark sections of your page. The canvas is your game’s stage.</p>
                 <p>In this step, you’ll set up your HTML structure and a blank blue canvas using CSS.</p>
-                <a href="step1_project_template.html" class="step-link" target="_blank">👉 View Step 1 Code</a>
+                <a href="https://github.com/aiwhoo/GameGarageBook/blob/main/lesson%201%20fishy%20intro/step1_project_template.html" class="step-link" target="_blank">👉 View Step 1 Code</a>
                 <img width="100%" src="screenshots/image8_project_template.png"> </img>
             </section>
 
