added video embedding into lesson1.html

--- a/lesson 1 fishy intro/lesson1.html
+++ b/lesson 1 fishy intro/lesson1.html
@@ -68,12 +68,23 @@
         </header>
 
         <main>
+
             <section>
                 <h2>🎯 Goal</h2>
                 <p>By the end of this lesson, you’ll move a fish sprite with the arrow keys, switch from a rectangle to an image sprite, and add a background!</p>
                 <p><strong>Target:</strong> 6th graders (no coding experience)</p>
                 <p><strong>Tech:</strong> HTML + Kontra.js</p>
                 <img width="100%" src="screenshots/image9_lesson1_outcome.png"> </img>
+            </section>
+
+            <section>
+                <div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;">
+                    <iframe
+                            src="https://drive.google.com/file/d/1J_nXUJNTRziVMLdPNkPXKsDpp2YxOqM-/preview"
+                            style="position:absolute;top:0;left:0;width:100%;height:100%;"
+                            allow="autoplay">
+                    </iframe>
+                </div>
             </section>
 
             <section>
