--- a/lesson 1 fishy intro/step6.4_renderupdate.html
+++ b/lesson 1 fishy intro/step6.4_renderupdate.html
@@ -41,10 +41,6 @@
                         if (keyPressed('arrowright')) this.x += 2;
                         if (keyPressed('arrowup')) this.y -= 2;
                         if (keyPressed('arrowdown')) this.y += 2;
-                    },
-                    render() {
-                        this.context.fillStyle = this.color;
-                        this.context.fillRect(this.x, this.y, this.width, this.height)
                     }
                 });
                 let loop = kontra.GameLoop({
@@ -52,6 +48,7 @@
                         player.update();
                     },
                     render() {
+                        background.render();
                         player.render();
                     }
                 });
