--- a/lesson 1 fishy intro/lesson1.html
+++ b/lesson 1 fishy intro/lesson1.html
@@ -174,16 +174,16 @@ kontra.init('game');
                 <p>Draw the background first, then the player image on top.</p>
 
                 <p>🎉 Your fish should now appear swimming over the ocean background!</p>
-                <a href="https://github.com/aiwhoo/GameGarageBook/blob/main/lesson%201%20fishy%20intro/step6_loadimages.html"
+                <a href="https://github.com/aiwhoo/GameGarageBook/blob/main/lesson%201%20fishy%20intro/step6.1_loadimages.html"
                    class="step-link" target="_blank">👉 View Step 6.1 Code</a>
                 <img width="100%" src="screenshots/image13_loading_images.png"> </img>
-                <a href="https://github.com/aiwhoo/GameGarageBook/blob/main/lesson%201%20fishy%20intro/step7_backgroundimage.html"
+                <a href="https://github.com/aiwhoo/GameGarageBook/blob/main/lesson%201%20fishy%20intro/step6.2_backgroundimage.html"
                    class="step-link" target="_blank">👉 View Step 6.2 Code</a>
                 <img width="100%" src="screenshots/image2_background_sprite.png"> </img>
-                <a href="https://github.com/aiwhoo/GameGarageBook/blob/main/lesson%201%20fishy%20intro/step8_playerimage.html"
+                <a href="https://github.com/aiwhoo/GameGarageBook/blob/main/lesson%201%20fishy%20intro/step6.3_playerimage.html"
                    class="step-link" target="_blank">👉 View Step 6.3 Code</a>
                 <img width="100%" src="screenshots/image7_player_image.png"> </img>
-                <a href="https://github.com/aiwhoo/GameGarageBook/blob/main/lesson%201%20fishy%20intro/step9_renderupdate.html"
+                <a href="https://github.com/aiwhoo/GameGarageBook/blob/main/lesson%201%20fishy%20intro/step6.3_renderupdate.html"
                    class="step-link" target="_blank">👉 View Step 6.4 Code</a>
                 <img width="100%" src="screenshots/image5_gameloop_render.png"> </img>
             </section>
