--- a/lesson 2 Enemies/lesson2.html
+++ b/lesson 2 Enemies/lesson2.html
@@ -93,17 +93,7 @@
             <section>
                 <div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;">
                     <iframe
-                            src="https://drive.google.com/file/d/1dfYqp1ynl4PvkPNdYYp_8uqmUx7mcBJE/view?usp=drive_link"
-                            style="position:absolute;top:0;left:0;width:100%;height:100%;"
-                            allow="autoplay">
-
-                    </iframe>
-                </div>
-            </section>
-            <section>
-                <div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;">
-                    <iframe
-                            src="https://drive.google.com/file/d/14f3l0Z08Baxoc8kwvveHHd4SWeptGUTn/view?usp=drive_link"
+                            src="https://drive.google.com/file/d/1dfYqp1ynl4PvkPNdYYp_8uqmUx7mcBJE/preview"
                             style="position:absolute;top:0;left:0;width:100%;height:100%;"
                             allow="autoplay">
 
@@ -156,6 +146,17 @@
                 <a href=https://github.com/aiwhoo/GameGarageBook/blob/main/lesson%202%20Enemies/step4_enemyarmy.html
                    class="step-link" target="_blank">👉 View Step 4 Code</a>
                 <img width="100%" src="screenshots/image6_enemyarmy.png" alt="Enemy list array">
+            </section>
+
+            <section>
+                <div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;">
+                    <iframe
+                            src="https://drive.google.com/file/d/1HfGwKLaJG12FQDVUzVyZDhbH-yClu5Lu/preview"
+                            style="position:absolute;top:0;left:0;width:100%;height:100%;"
+                            allow="autoplay">
+
+                    </iframe>
+                </div>
             </section>
 
             <section>
